
    * New :mod:`passlib.pwd` module added to aid in password generation
      and strength measurement (with contributions from Thomas Waldmann).

    * Added :class:`~passlib.hash.cisco_asa` which provides (tentative)
      support for Cisco ASA 7.0 and newer hashes.

    * The :func:`~passlib.crypto.digest.pbkdf2_hmac` function and all PBKDF2-based
      hashes have been sped up by ~20% compared to Passlib 1.6.

    * Passlib will now detect and work around the fatal concurrency bug
      in py-bcrypt 0.2 and earlier (a :exc:`~passlib.exc.PasslibSecurityWarning`
      will also be issued). Nevertheless, users are *strongly* encouraged
      to upgrade to py-bcrypt 0.3 or another bcrypt library if you are using
      the :doc:`bcrypt </lib/passlib.hash.bcrypt>` hash.

    * :class:`~passlib.hash.scrypt` -- New password hash format which uses
      the SCrypt KDF (:issue:`8`).

    * :class:`~passlib.hash.argon2` -- Support for the Argon2 password hash (:issue:`69`).

    * The :mod:`passlib.apache` htpasswd helpers now preserve blank lines and comments,
      rather than choking on them (:issue:`73`).

Minor Internal Changes
----------------------
    * The shared :class:`!PasswordHash` unittests now check all hash handlers for
      basic thread-safety (motivated by the pybcrypt 0.2 concurrency bug).

    * Most of passlib's internal cryptography helpers have been moved from
      :mod:`!passlib.utils` to :mod:`passlib.crypto`, and the APIs refactored.
      This allowed unification of various hash management routines,
      some speed ups to the HMAC and PBKDF2 primitives, and opens up the architecture
      to support more optional backend libraries.

      Compatibility wrappers will be kept in place at the old location until Passlib 2.0.

    * The majority of CryptContext's internal rounds handling & migration code has been
      moved to the password hashes themselves, via the new :meth:`~passlib.ifc.PasswordHash.using`